--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Hello World!</h1>
     <p>My name is Matt :)</p>
-    <img src="assets/images/mattmorgan.jpg" alt="Profile pic">
+    <img src="assets/images/logo.png" alt="Profile pic">
 </body>
 </html>
